--- a/Projecto 1 - Juego del Gato..ipynb
+++ b/Projecto 1 - Juego del Gato..ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,16 @@
      "text": [
       "Quieres ser X o O?: x\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['X', 'O']"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -59,6 +69,10 @@
     "    while not (player == \"X\" or player == \"O\"):\n",
     "        player = input(\"Quieres ser X o O?: \")\n",
     "        player = player.upper()\n",
+    "    if player == \"X\":\n",
+    "        return [\"X\", \"O\"]\n",
+    "    else:\n",
+    "        return [\"O\", \"X\"]\n",
     "\n",
     "player_input()"
    ]
@@ -288,7 +302,24 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Welcome to Tic Tac Toe!')\n",
+    "\n",
+    "#while True:\n",
+    "    # Set the game up here\n",
+    "    #pass\n",
+    "\n",
+    "    #while game_on:\n",
+    "        #Player 1 Turn\n",
+    "        \n",
+    "        \n",
+    "        # Player2's turn.\n",
+    "            \n",
+    "            #pass\n",
+    "\n",
+    "    #if not replay():\n",
+    "        #break"
+   ]
   }
  ],
  "metadata": {
